[package]
name = "onell_algs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "onell_algs_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.5", features = ["extension-module"] }
bitvec = "1"
rand = "0.8"
statrs = "0.15"
rand_mt = "4"
